# saiblo-local-judger

./: LICENSE.txt  README.md  setup.cfg  test.py
.github/workflows/: gui-package.yml  python-publish.yml
src/: launcher.py
src/adapter/: __main__.py  main.py
src/core/: cli.py  comm.py  exception.py  judger.py  logger.py  protocol.py  summary.py  utils.py
src/gui/: __init__.py  __main__.py  gui.py  running_dialog.py  start_dialog.py
src/judger-cli/: cli.py
src/judger_cli/: cli.py
