[metadata]
name = saiblo-local-judger
version = 0.0.1
author = xsun2001
author_email = xcx14@outlook.com
description = Saiblo Local Judger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saiblo/saiblo-local-judger
project_urls =
    Bug Tracker = https://github.com/saiblo/saiblo-local-judger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    PySide6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    judger = core.cli:main
    adapter = adapter.main:main
    judger-gui = gui.gui:main