[metadata]
name = saiblo-local-judger
version = 0.0.2
author = xsun2001
author_email = xcx14@outlook.com
description = Saiblo Local Judger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saiblo/saiblo-local-judger
project_urls =
    Bug Tracker = https://github.com/saiblo/saiblo-local-judger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    adapter
    core
    judger-cli
python_requires = >=3.7

[options.packages.find]
where = src
exclude =
    src/gui
    src/launcher.py

[options.entry_points]
console_scripts =
    judger-cli = judger-cli.cli:main
    judger-adapter = adapter.main:main